updated admin pages
