# src/main/frontend/api-docs.yaml
@@ -1529,12 +1529,54 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  type: string
-                  format: byte
+                $ref: '#/components/schemas/Newsletter'
       security:
       - Bearer_Authentication: []
+  /events/page:
+    get:
+      tags:
+      - event-controller
+      operationId: getEventPages
+      parameters:
+      - name: page
+        in: query
+        required: false
+        schema:
+          type: integer
+          format: int32
+          default: 0
+      - name: size
+        in: query
+        required: false
+        schema:
+          type: integer
+          format: int32
+          default: 3
+      - name: sort
+        in: query
+        required: false
+        schema:
+          type: array
+          items:
+            type: string
+          default:
+          - id
+          - desc
+      responses:
+        "404":
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                type: string
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                additionalProperties:
+                  type: object
   /categories/{category_name}:
     get:
       tags:
@@ -1871,6 +1913,22 @@ components:
         size:
           type: integer
           format: int64
+    Newsletter:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        title:
+          type: string
+        content:
+          type: array
+          items:
+            type: string
+            format: byte
+        creationDate:
+          type: string
+          format: date-time
   securitySchemes:
     Bearer_Authentication:
       type: http
