# src/main/java/hu/bme/edu/handmade/controllers/EventController.java
@@ -6,11 +6,18 @@ import hu.bme.edu.handmade.web.dto.EventDto;
 import hu.bme.edu.handmade.web.dto.error.ResourceNotFoundException;
 import io.swagger.v3.oas.annotations.security.SecurityRequirement;
 import org.springframework.dao.EmptyResultDataAccessException;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
 
+import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 
 @RestController
 @CrossOrigin(origins="http://localhost:4200", maxAge=3600)
@@ -24,6 +31,40 @@ public class EventController {
     @GetMapping()
     public List<Event> getEvents() {
         return eventService.findAllEvents();
+    }
+
+    @GetMapping("/page")
+    public ResponseEntity<Map<String, Object>> getEventPages(@RequestParam(defaultValue = "0") int page,
+                                                            @RequestParam(defaultValue = "3") int size,
+                                                            @RequestParam(defaultValue = "id,desc") String[] sort) {
+        try {
+            List<Sort.Order> orders = new ArrayList<>();
+            if (sort[0].contains(",")) {
+                for (String sortOrder : sort) {
+                    String[] _sort = sortOrder.split(",");
+                    orders.add(new Sort.Order(getSortDirection(_sort[1]), _sort[0]));
+                }
+            } else {
+                orders.add(new Sort.Order(getSortDirection(sort[1]), sort[0]));
+            }
+            Pageable paging = PageRequest.of(page, size, Sort.by(orders));
+            Page<Event> pageEvents = eventService.findPages(paging);
+            List<Event> events = pageEvents.getContent();
+
+            if (events.isEmpty()) {
+                return ResponseEntity.noContent().build();
+            }
+
+            Map<String, Object> response = new HashMap<>();
+            response.put("data", events);
+            response.put("currentPage", pageEvents.getNumber());
+            response.put("totalItems", pageEvents.getTotalElements());
+            response.put("totalPages", pageEvents.getTotalPages());
+
+            return ResponseEntity.ok(response);
+        } catch (Exception e) {
+            return ResponseEntity.internalServerError().build();
+        }
     }
 
     @GetMapping("/{id}")
@@ -59,5 +100,15 @@ public class EventController {
         catch (EmptyResultDataAccessException e) {
             return ResponseEntity.notFound().build();
         }
+    }
+
+    private Sort.Direction getSortDirection(String direction) {
+        if (direction.equals("asc")) {
+            return Sort.Direction.ASC;
+        } else if (direction.equals("desc")) {
+            return Sort.Direction.DESC;
+        }
+
+        return Sort.Direction.ASC;
     }
 }
